--- a/src/styles.css
+++ b/src/styles.css
@@ -233,6 +233,8 @@ a:active {
 .mat-list .mat-list-item .mat-list-avatar.img-preview {
   height: 200px;
   width: 115px;
+  object-fit: cover;
+  border-radius: 10px;
 }
 /*
 .mat-list .mat-list-item {
