feat(championship): Adapt mobile card color

--- a/src/app/championship/championship.component.css
+++ b/src/app/championship/championship.component.css
@@ -218,4 +218,8 @@ mat-table {
   .mobile-standings {
     display: block;
   }
+
+  .mobile-card {
+    background: linear-gradient(135deg, rgba(210, 210, 210, 0.2), rgba(20, 20, 20, 0.75));
+  }
 }
